--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
+/* App.css */
+
+body {
+  background-color: #171717;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+.title-container {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.title {
+  font-size: 80px;
+  color: white;
+  text-align: center;
+  background: linear-gradient(45deg, #ff416c, #6e2bff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.paragraph {
+  font-size: 32px;
+  color: white;
+  font-family: 'Tahoma', serif;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.gradient-button {
+  background: linear-gradient(45deg, #ff416c, #6e2bff);
+  border: solid 0.1rem;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+  transition: background 0.3s, -webkit-background-clip 0.3s, -webkit-text-fill-color 0.3s;
+}
+
+.gradient-button:hover {
+  background: linear-gradient(45deg, #6e2bff, #ff416c);
+  -webkit-text-fill-color: white;
+}
+
+.wheel-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.spin-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.spin-button:hover {
+  background-color: #45a049;
+}
+
+.wheel {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 20px;
+  margin: 80px;
+}
+
+/* Add this styling for the spinning arrow */
+.wheel::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50vh;
+  height: 0;
+  border-style: solid;
+  border-width: 1110px 15px;
+  border-image: linear-gradient(45deg, #6e2bff, #ff416c) 1;
+  transform-origin: 50% 50%;
+  transform: translate(-50%, -50%) rotate(0deg);
+  transition: transform 3s ease-in-out;
+  margin: 0px;
+  padding: 12px;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.5); /* Add a white glow effect */
+}
+
+.wheel::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px; /* Adjust the width to cover the entire wheel */
+  height: 400px; /* Adjust the height to cover the entire wheel */
+  border-radius: 50%;
+  background: linear-gradient(45deg, #6e2bff, #ff416c);
+  opacity: 0;
+  animation: glow 3s infinite alternate; /* Animation for the glow effect */
+}
+
+@keyframes glow {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.8; /* Adjust the opacity to control the intensity of the glow */
+  }
+}
+
+.spinning::before {
+  animation: spin 6s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  33% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+  66% {
+    transform: translate(-50%, -50%) rotate(1420deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(4000deg);
+  }
+}
+
+/* Add these styles to App.css */
+.announcement-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.announcement {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.winner-container {
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.winner-image {
+  width: 360px;
+  height: 360px;
+  border-radius: 50%;
+  margin: 10px auto;
+  display: block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.close-button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #4CAF50;
   color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.close-button:hover {
+  background-color: #45a049;
 }
